editing the port

--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,10 @@ html {
   font-family: "Spartan", sans-serif;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
   margin: 0;
   padding: 0;
