issues with screen size and playepause btn

--- a/public/style.css
+++ b/public/style.css
@@ -772,3 +772,25 @@ h3 {
     margin-bottom: 7px;
   }
 }
+
+.added-to-queue {
+  animation: knock 1 0.5s ease-in-out;
+}
+
+@keyframes knock {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-5px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  75% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
