Resolve merge conflicts

--- a/public/style.css
+++ b/public/style.css
@@ -644,8 +644,11 @@ h3 {
 
   .player-controls {
     margin-top: 48px;
+    transform: translate(-50%, -50%);
+    top: 0%;
     display: flex;
-    margin-left: -35px;
+    left: 50%;
+    width: 100%;
     align-items: center;
     justify-content: center;
   }
